--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "mysite"
 version = "0.1.0"
 description = ""
-authors = ["Marek Kaput <marek.kaput@swmansion.com>"]
+authors = ["John-Anthony Thevos <john.thevos@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -11,6 +11,11 @@ dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.5"
 whitenoise = {extras = ["brotli"], version = "^5.1.0"}
 gunicorn = "^20.0.4"
+django-extensions = "^3.1.5"
+botocore = "1.17.62"
+boto3 = "1.14.62"
+decouple = "^0.0.7"
+Pillow = "^9.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
