--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 databases:
   - name: mysite
-    databaseName: mysite
-    user: mysite
+    databaseName: POSTGRES_DB_NAME
+    user: jg_POSTGRES_USERstu
+
 
 services:
   - type: web
@@ -12,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: jg_studios
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
