--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 databases:
   - name: mysite
-    databaseName: POSTGRES_DB_NAME
-    user: POSTGRES_USER
-
+    databaseName: jg_studios
+    user: jg_studios_user
 
 services:
   - type: web
@@ -13,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: jg_studios
+          name: mysite
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
