--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ botocore = "1.17.62"
 boto3 = "1.14.62"
 decouple = "^0.0.7"
 Pillow = "^9.1.1"
+django-storages = "^1.12.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
