--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: mysite_igsh
-          property: postgres://mysite:6R4SltwS4wDFwUon9uNlWPSrJ1qYtfkT@dpg-ca8jp5r0tnutcided9mg-a/mysite_igsh
+          property: connectionString
       - key: SECRET_KEY
         generateValue: true
       - key: WEB_CONCURRENCY
